# GOPH-420-Midterm2

./: README.md  pyproject.toml
examples/: driver.py
src/: muktiregression.py
