[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GOPH_420_Midterm2"
version = "0.0.1"
authors = [
    { name="Colin Maloney", email="colin.maloney@ucalgary.ca"}
]
description="An example Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/colin-maloney/GOPH-420-Midterm2.git"